examples/test/testpolicy11571.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11571
  namespace: namespace243
spec:
  podSelector:
    matchLabels:
      key6: value41
      key16: value49
      key2: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value39
          key6: value19
          key9: value13
      podSelector:
        matchLabels:
          key2: value48
